Fix some color contrast bugs

--- a/styles/note.styl
+++ b/styles/note.styl
@@ -39,6 +39,12 @@
     color: white
     textarea
       color: white
+      &::placeholder 
+        color: white
+        opacity: 1
     a
       color: white
       text-decoration: underline
+    .content-editable:empty:before
+      color: white
+      opacity: 1
